--- a/views/cert-of-closure-list.html
+++ b/views/cert-of-closure-list.html
@@ -33,28 +33,27 @@
                         <table st-table="rowCollection" class="table table-striped" >
                             <thead>
                                 <tr>
-                                    <th>Residence Id</th>
-                                    <th>Address</th>                                  
+                                    <th>Id</th>
+                                    <th>Business Owner</th>  
+                                    <th>Business Name</th>
+                                    <th>Business Address</th>
+                                    <th>Business Type</th>
+                                    <th>Date Issued</th>                               
+                                    <th>Date Closed</th>                               
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="row in vm.residences | filter:searchKey">
+                                <tr ng-repeat="row in vm.listOfCertificates | filter:searchKey">
                                     <td>{{row.id}}</td>
-                                    <td>Block {{row.block_no}} Lot {{row.lot_no}}, {{row.street}} St., Sitio {{row.sitio}}, {{row.subdivision}} Subdivision, Brgy. {{row.brgy}}, {{row.city}} City {{row.zip}}, {{row.province}}</td>
-                                    <td>
-                                        <button type="button" ng-click="" class="btn btn-sm btn-success">
-                                            <i class="fa fa-eye"></i>
-                                        </button>
-                                        &nbsp;
-                                        <button type="button" ng-click="" class="btn btn-sm btn-primary">
-                                            <i class="fa fa-pencil"></i>
-                                        </button>
-                                        &nbsp;
-                                        <button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
-                                            <i class="fa fa-trash-o"></i>
-                                        </button>
-                                    </td>
+                                    <td>{{row.first_name}} {{row.middle_name.charAt(0)}}. {{row.last_name}}</td>
+                                    <td>{{row.business_name}}</td>
+                                    <td>{{row.business_address}}</td>
+                                    <td>{{row.business_type}}</td>
+                                    <td>{{row.date_issued | amDateFormat:'MM/D/YYYY'}}</td>
+                                    <td>{{row.date_closed | amDateFormat:'MM/D/YYYY'}}</td>
+
                                 </tr>
+
                             </tbody>
                         </table>
                     </div>
@@ -77,7 +76,7 @@
                 </div>
             </div>
         </div>
-        qweqwe
+        
         <br />
         <br />
         <br />
@@ -94,6 +93,7 @@
                         <table st-table="rowCollection" class="table table-striped" >
                             <thead>
                                 <tr>
+                                    <th>Id</th>
                                     <th>Name</th>
                                     <th>Gender</th>
                                     <th>Address</th>   
@@ -102,7 +102,7 @@
                             </thead>
                             <tbody>
                                 <tr ng-repeat="row in vm.persons | filter: searchKey">
-                                <p>{{row | json}}</p>
+                                    <td>{{row.id}}</td>
                                     <td>{{row.first_name}} {{row.middle_name.charAt(0)}}. {{row.last_name}}</td>
                                     <td>{{row.gender}}</td>
                                     <td>Block {{row.temp_person_infos[0].residence.block_no}} Lot {{row.temp_person_infos[0].residence.lot_no}}, {{row.temp_person_infos[0].residence.street}} St., Sitio {{row.temp_person_infos[0].residence.sitio}}, {{row.temp_person_infos[0].residence.subdivision}} Subdivision, Brgy. {{row.temp_person_infos[0].residence.brgy}}, {{row.temp_person_infos[0].residence.city}} City {{row.temp_person_infos[0].residence.zip}}, {{row.temp_person_infos[0].residence.province}}</td>
