--- a/views/form-confirm.html
+++ b/views/form-confirm.html
@@ -2,7 +2,7 @@
     <span class="fa fa-thumbs-up"></span>
     <h3>Almost Done!</h3>
 </div>
-<section class="invoice">
+<!-- <section class="invoice"> -->
     <div class="panel box box-primary">
         <div class="box-header with-border">
             <h4 class="box-title">
@@ -104,7 +104,7 @@
             </div>
         </div>
     </div>
-    </div>
+
     <!-- /.row -->
     <!-- this row will not appear when printing -->
 
