--- a/views/persons.html
+++ b/views/persons.html
@@ -4,10 +4,9 @@
         <!-- <div class="col-md-3">
             <select class="form-control input-md pull-right" ng-model="itemsPerPage" ng-change="perPage()" ng-options="('show '+size+' per page') for size in pageSizes"></select>
         </div> -->
-
         <div class="col-md-3">
             <div class="input-group input-group-md add-on">
-                <input type="text" class="form-control search-query" ng-model="searchKey"  placeholder="Search">
+                <input type="text" class="form-control search-query" ng-model="searchKey" placeholder="Search">
                 <div class="input-group-btn">
                     <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
                 </div>
@@ -18,7 +17,6 @@
                 <button class="btn btn-block btn-primary">New Record</button>
             </a>
         </div>
-        
         <br />
         <br />
         <br />
@@ -49,14 +47,19 @@
                                     <td>{{row.date_of_birth | date: 'MMMM dd, yyyy'}} </td>
                                     <td>{{row.place_of_birth}}</td>
                                     <td>
-                                        <button type="button" ng-click="toggleViewCensus()" class="btn btn-sm btn-success">
+                                        <button type="button" ng-click="toggleViewCensus($index)" class="btn btn-sm btn-success">
                                             <i class="fa fa-eye"></i>
                                         </button>
                                         &nbsp;
-                                        <button type="button" ng-click="toggleEditCensus()" class="btn btn-sm btn-primary">
+                                        <a ui-sref="form-edit.address({personId: row.id})"><button type="button" class="btn btn-sm btn-primary">
                                             <i class="fa fa-pencil"></i>
                                         </button>
-                                        &nbsp;
+                                        </a>
+<!--                                         <a ui-sref="form-edit.address"><button type="button" ng-click="toggleEditCensus()" class="btn btn-sm btn-primary">
+                                            <i class="fa fa-pencil"></i>
+                                        </button>
+                                        </a>
+ -->                                        &nbsp;
                                         <button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
                                             <i class="fa fa-trash-o"></i>
                                         </button>
@@ -73,67 +76,107 @@
         <!-- /.col -->
     </div>
     <div ui-view></div>
-    <modal title="Census Info" visible="showViewCensus">
+    <modal title="Census Info" visible="showViewCensus" >
         <div class="row">
             <div class="col-xs-12">
-                <h2 class="page-header">
-                <i class="fa fa-user "></i> Personal Info
+                <h2 class="page-header" ng-click="isCollapsed1 = !isCollapsed1">
+                <i class="fa  fa-male "></i> Personal Info
                 <!-- <small class="pull-right">Date: 2/10/2014</small> -->
               </h2>
             </div>
             <!-- /.col -->
         </div>
         <!-- row -->
-        <div class="row invoice-info">
-            <div class="col-sm-4 invoice-col">
-                <strong>Name:</strong> <br />John Anthony Pecson 
+        <div class="panel-collapse " ng-class="isCollapsed1? 'collapse':''">
+            <div class="row invoice-info">
+                <div class="col-sm-4 invoice-col">
+                    <strong>Name:</strong>
+                    <br />{{vm.person.first_name}} {{vm.person.middle_name.charAt(0)}}. {{vm.person.last_name}} 
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-4 invoice-col">
+                    <strong>Address:</strong>
+                    <br />Block {{vm.person.temp_person_infos[0].residence.block_no}} Lot {{vm.person.temp_person_infos[0].residence.lot_no}}, {{vm.person.temp_person_infos[0].residence.street}} St., Sitio {{vm.person.temp_person_infos[0].residence.sitio}}, {{vm.person.temp_person_infos[0].residence.subdivision}} Subdivision, Brgy. {{vm.person.temp_person_infos[0].residence.brgy}}, {{vm.person.temp_person_infos[0].residence.city}} City {{vm.person.temp_person_infos[0].residence.zip}}, {{vm.person.temp_person_infos[0].residence.province}}
+                    <br />
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-4 invoice-col">
+                    <strong>Contact #:</strong>
+                    <br />{{vm.person.contact_no}} 
+                </div>
+                <!-- /.col -->
             </div>
-            <!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-                <strong>Civil Status:</strong> <br />Single   
+            <!-- row invoice-info -->
+            <br />
+            <div class="row invoice-info">
+                <div class="col-sm-4 invoice-col">
+                    <strong>Email:</strong>
+                    <br />{{vm.person.email}}
+                </div>
+                <div class="col-sm-4 invoice-col">
+                    <strong>Date Of Birth:</strong>
+                    <br />{{vm.person.date_of_birth}}
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-4 invoice-col">
+                    <strong>Place Of Birth:</strong>
+                    <br />{{vm.person.place_of_birth}}
+                </div>
+                <!-- /.col -->
             </div>
-            <!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-                <strong>Gender:</strong> <br />Male   
+            <br />
+            <!-- row invoice-info -->
+            <div class="row invoice-info">
+                <div class="col-sm-4 invoice-col">
+                    <strong>Civil Status:</strong>
+                    <br />{{vm.person.temp_person_infos[0].civil_status}}
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-4 invoice-col">
+                    <strong>Gender:</strong>
+                    <br />{{vm.person.gender}}
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-4 invoice-col">
+                    <strong>Educational Attainment:</strong>
+                    <br />{{vm.person.temp_person_infos[0].educational_attainment}}
+                </div>
+                <!-- /.col -->
             </div>
-            <!-- /.col -->
-        </div>
-        <!-- row invoice-info -->
-        <br />
-        <div class="row invoice-info">
-            <div class="col-sm-4 invoice-col">
-                <strong>Place Of Birth:</strong> <br />Bacolod City    
+            <!-- /.row invoice-info -->
+            <br />
+            <div class="row invoice-info">
+                <div class="col-sm-2 invoice-col">
+                    <strong>Employed?</strong>
+                    <br />{{vm.person.temp_person_infos[0].is_employed == 1? 'Yes': 'No'}} 
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-2 invoice-col">
+                    <strong>SSS?</strong>
+                    <br />{{vm.person.temp_person_infos[0].with_sss == 1? 'Yes': 'No'}}
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-2 invoice-col">
+                    <strong>Philhealth?</strong>
+                    <br /> {{vm.person.temp_person_infos[0].with_philhealth == 1? 'Yes': 'No'}}
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-2 invoice-col">
+                    <strong>Voter?</strong>
+                    <br /> {{vm.person.temp_person_infos[0].is_voter == 1? 'Yes': 'No'}}
+                </div>
+                <div class="col-sm-2 invoice-col">
+                    <strong>Electricity?</strong>
+                    <br /> {{vm.person.temp_person_infos[0].with_electricity == 1? 'Yes': 'No'}}
+                </div>
+                <!-- /.col -->
+                <!-- /.col -->
             </div>
-            <!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-                <strong>Date Of Birth:</strong> <br />June 28, 1991  
-            </div>
-            <!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-                <strong>Address:</strong> <br /> Hda. Clementina, Brgy. Talubangi, Kabankalan City  <br />
-            </div>
-            <!-- /.col -->
-        </div>
-        <br />
-        <!-- row invoice-info -->
-        <div class="row invoice-info">
-            <div class="col-sm-4 invoice-col">
-                <strong>Employed?</strong> <br />Yes    
-            </div>
-            <!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-                <strong>SSS?</strong> <br />Yes
-            </div>
-            <!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-                <strong>Educational Attainment?</strong> <br /> College Graduate
-            </div>
-            <!-- /.col -->
         </div>
         <!-- row invoice-info -->
         <div class="row">
             <div class="col-xs-12">
-                <h2 class="page-header">
+                <h2 class="page-header" ng-click="isCollapsed2 = !isCollapsed2" ng-init="isCollapsed2=true">
                 <i class="fa fa-female  "></i> Spouse Info
                 <!-- <small class="pull-right">Date: 2/10/2014</small> -->
               </h2>
@@ -141,109 +184,102 @@
             <!-- /.col -->
         </div>
         <!-- row -->
-        <div class="row invoice-info">
-            <div class="col-sm-4 invoice-col">
-                From
-                <address>
-                    <strong>Admin, Inc.</strong>
-                    <br> 795 Folsom Ave, Suite 600
-                    <br> San Francisco, CA 94107
-                    <br> Phone: (804) 123-5432
-                    <br> Email: info@almasaeedstudio.com
-                </address>
+        <div class="panel-collapse " ng-class="isCollapsed2? 'collapse':''">
+            <div class="row invoice-info">
+                <div class="col-sm-4 invoice-col">
+                    <strong>Name:</strong>
+                    <br /> {{vm.person.temp_person_infos[0].spouse_first_name}} {{vm.person.temp_person_infos[0].spouse_middle_name.charAt(0)}}. {{vm.person.temp_person_infos[0].spouse_last_name}}
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-4 invoice-col">
+                    <strong>Gender:</strong>
+                    <br /> {{vm.person.temp_person_infos[0].spouse_gender}}
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-4 invoice-col">
+                    <strong>Date Of Birth</strong>
+                    <br /> {{vm.person.temp_person_infos[0].spouse_date_of_birth}}
+                </div>
+                <!-- /.col -->
             </div>
-            <!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-                To
-                <address>
-                    <strong>John Doe</strong>
-                    <br> 795 Folsom Ave, Suite 600
-                    <br> San Francisco, CA 94107
-                    <br> Phone: (555) 539-1037
-                    <br> Email: john.doe@example.com
-                </address>
-            </div>
-            <!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-                <b>Invoice #007612</b>
-                <br>
-                <br>
-                <b>Order ID:</b> 4F3S8J
-                <br>
-                <b>Payment Due:</b> 2/22/2014
-                <br>
-                <b>Account:</b> 968-34567
-            </div>
-            <!-- /.col -->
+            <!-- row invoice-info -->
         </div>
-        <!-- row invoice-info -->
         <div class="row">
             <div class="col-xs-12">
-                <h2 class="page-header">
-                <i class="fa fa-child  "></i> Children Info
-                <!-- <small class="pull-right">Date: 2/10/2014</small> -->
-              </h2>
+                <h2 class="page-header" ng-click="isCollapsed3 = !isCollapsed3" ng-init="isCollapsed3=true">
+                        <i class="fa fa-child  "></i> Children Info
+                        <!-- <small class="pull-right">Date: 2/10/2014</small> -->
+                      </h2>
             </div>
             <!-- /.col -->
         </div>
         <!-- row -->
-        <div class="row invoice-info">
-            <div class="col-sm-4 invoice-col">
-                From
-                <address>
-                    <strong>Admin, Inc.</strong>
-                    <br> 795 Folsom Ave, Suite 600
-                    <br> San Francisco, CA 94107
-                    <br> Phone: (804) 123-5432
-                    <br> Email: info@almasaeedstudio.com
-                </address>
+        <div ng-class="isCollapsed3? 'collapse':''">
+            <div class="row invoice-info">
+                <div class="col-sm-12 invoice-col">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Date Of Birth</th>
+                                <th>Gender</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        <tr  ng-repeat="row in vm.person.children">
+                            <td>{{row.first_name}} {{row.middle_name.charAt(0)}}. {{row.last_name}}</td>
+                            <td>{{row.date_of_birth}}</td>
+                            <td>{{row.gender}}</td>                            
+                        </tr>
+                            <!-- ngRepeat: child in vm.person.children -->
+                        </tbody>
+                    </table>
+                </div>
             </div>
-            <!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-                To
-                <address>
-                    <strong>John Doe</strong>
-                    <br> 795 Folsom Ave, Suite 600
-                    <br> San Francisco, CA 94107
-                    <br> Phone: (555) 539-1037
-                    <br> Email: john.doe@example.com
-                </address>
-            </div>
-            <!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-                <b>Invoice #007612</b>
-                <br>
-                <br>
-                <b>Order ID:</b> 4F3S8J
-                <br>
-                <b>Payment Due:</b> 2/22/2014
-                <br>
-                <b>Account:</b> 968-34567
+            <!-- /.row invoice-info -->
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <h2 class="page-header" ng-click="isCollapsed4 = !isCollapsed4" ng-init="isCollapsed4=true">
+                        <i class="fa fa-child  "></i> Parent Info
+                        <!-- <small class="pull-right">Date: 2/10/2014</small> -->
+                      </h2>
             </div>
             <!-- /.col -->
         </div>
-        <!-- row invoice-info -->
-        <!-- form start -->
-        <table class="view-census">
-            <tbody>
-                <tr class="spacer-below">
-                    <td colspan="2">Name: <strong>Tionson, Glenyee Junees M.</strong></td>
-                </tr>
-                <tr class="spacer-below">
-                    <td>Gender:<strong> Female</strong></td>
-                    <td>Age:<strong> 18</strong></td>
-                    <td>Date of Birth:<strong> 1997-07-02</strong></td>
-                </tr>
-                <tr class="spacer-below">
-                    <td>Civil Status:<strong> Separated</strong></td>
-                    <td colspan="2">Address:<strong> brgy=loloai banana city neg occ</strong></td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+        <!-- row -->
+        <div ng-class="isCollapsed4? 'collapse':''">
+            <div class="row invoice-info">
+                <div class="col-sm-6 invoice-col">
+                    <strong>Father's Name</strong>
+                    <br /> {{vm.person.father_first_name}} {{vm.person.father_middle_name.charAt(0)}}. {{vm.person.father_last_name}}
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-sm-6 invoice-col">
+                        <strong>Mother's Name</strong>
+                        <br /> {{vm.person.mother_first_name}} {{vm.person.mother_middle_name.charAt(0)}}. {{vm.person.mother_last_name}}
+                    </div> 
+                    <!-- /.col -->
+                </div>
+                 <!-- row invoice-info -->
+                 <br />
+                <div class="row invoice-info">
+                    <div class="col-sm-6 invoice-col">
+                        <strong>Father's Date Of Birth</strong>
+                        <br /> {{vm.person.father_date_of_birth}}
+                         </div>
+                        <!-- /.col -->
+                        <div class="col-sm-6 invoice-col">
+                            <strong>Mother's Date Of Birth</strong>
+                            <br /> {{vm.person.mother_date_of_birth}}
+                            <!-- /.col -->
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                </div>
     </modal>
     <modal title="Census Info" visible="showEditCensus">
         <!-- form start -->
@@ -304,4 +340,4 @@
             </div>
         </form>
     </modal>
-</div>
+    </div>
