--- a/views/form-edit-confirm.html
+++ b/views/form-edit-confirm.html
@@ -118,7 +118,7 @@
     <div class="row no-print">
         <div class="col-xs-12">
             <a href="invoice-print.html" target="_blank" class="btn btn-default"><i class="fa fa-print"></i> Print</a>
-            <button class="btn btn-success pull-right" ng-click="vm.save()"><i class="fa fa-check"></i>Submit Form</button>
+            <button class="btn btn-success pull-right" ng-click="vm.update(person)"><i class="fa fa-check"></i>Submit Form</button>
             <button class="btn btn-primary pull-right" style="margin-right: 5px;"><i class="fa fa-download"></i> Generate PDF</button>
         </div>
     </div>
