--- a/views/persons.html
+++ b/views/persons.html
@@ -60,9 +60,10 @@
                                         </button>
                                         </a>
  -->                                        &nbsp;
-                                        <button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
+                                        <button type="button" ng-click="removeItem(row.id)" class="btn btn-sm btn-danger" confirm="Are you sure, you want to delete the record of this person?">
                                             <i class="fa fa-trash-o"></i>
                                         </button>
+                                       <!--  <button type="button" ng-click="delete()" confirm="Are you sure, you want to delete the record of this person?">Delete</button> -->
                                     </td>
                                 </tr>
                             </tbody>
