--- a/views/form-address.html
+++ b/views/form-address.html
@@ -9,8 +9,8 @@
         <input class="form-control" name="residenceId" id="residenceId" type="text" ng-model="vm.person.residenceId" placeholder="09123456789" validator="number" no-validation-message="true" ng-change="vm.findAddress(vm.person.residenceId)">
     </div>
     
-    <p ng-hide="isEmpty(vm.foundAddress)">Found Address:</p>
-    <pre  ng-hide="isEmpty(vm.foundAddress)"><p>
+    <p ng-hide="vm.isEmpty(vm.foundAddress)">Found Address:</p>
+    <pre  ng-hide="vm.isEmpty(vm.foundAddress)"><p>
     Block {{vm.foundAddress.block_no}} Lot {{vm.foundAddress.lot_no}}, {{vm.foundAddress.street}} St., Sitio {{vm.foundAddress.sitio}}, {{vm.foundAddress.subdivision}} Subdivision,<br>
     Brgy. {{vm.foundAddress.barangay}}, {{vm.foundAddress.city}} City <br>
     {{vm.foundAddress.zip_code}}, {{vm.foundAddress.province}}</p></pre>
