--- a/views/persons.html
+++ b/views/persons.html
@@ -47,20 +47,16 @@
                                     <td>{{row.date_of_birth | date: 'MMMM dd, yyyy'}} </td>
                                     <td>{{row.place_of_birth}}</td>
                                     <td>
-                                        <button type="button" ng-click="toggleViewCensus($index)" class="btn btn-sm btn-success">
+                                        <button type="button" ng-click="vm.toggleViewCensus($index)" class="btn btn-sm btn-success">
                                             <i class="fa fa-eye"></i>
                                         </button>
                                         &nbsp;
-                                        <a ui-sref="form-edit.address({personId: row.id})"><button type="button" class="btn btn-sm btn-primary">
+                                        <a ui-sref="form-edit.address({personId: row.id, residenceId: row.temp_person_infos[0].residence.id })"><button type="button" class="btn btn-sm btn-primary">
                                             <i class="fa fa-pencil"></i>
                                         </button>
                                         </a>
-<!--                                         <a ui-sref="form-edit.address"><button type="button" ng-click="toggleEditCensus()" class="btn btn-sm btn-primary">
-                                            <i class="fa fa-pencil"></i>
-                                        </button>
-                                        </a>
- -->                                        &nbsp;
-                                        <button type="button" ng-click="removeItem(row.id)" class="btn btn-sm btn-danger" confirm="Are you sure, you want to delete the record of this person?">
+                                        &nbsp;
+                                        <button type="button" ng-click="vm.deletePerson(row.id)" class="btn btn-sm btn-danger" confirm="Are you sure, you want to delete the record of this person?">
                                             <i class="fa fa-trash-o"></i>
                                         </button>
                                        <!--  <button type="button" ng-click="delete()" confirm="Are you sure, you want to delete the record of this person?">Delete</button> -->
@@ -77,7 +73,7 @@
         <!-- /.col -->
     </div>
     <div ui-view></div>
-    <modal title="Census Info" visible="showViewCensus" >
+    <modal title="Census Info" visible="vm.showViewCensusModal" >
         <div class="row">
             <div class="col-xs-12">
                 <h2 class="page-header" ng-click="isCollapsed1 = !isCollapsed1">
@@ -282,7 +278,7 @@
                     <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
                 </div>
     </modal>
-    <modal title="Census Info" visible="showEditCensus">
+    <modal title="Census Info" visible="vm.showEditCensus">
         <!-- form start -->
         <form role="form">
             <div class="box-body">
